--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,17 +51,18 @@
     "eslint-plugin-babel": "5.1.0",
     "eslint-plugin-flowtype": "2.49.3",
     "eslint-plugin-import": "2.12.0",
-    "extract-text-webpack-plugin": "3.0.2",
     "flow-bin": "0.75.0",
     "hard-source-webpack-plugin": "0.9.0",
     "json5-loader": "1.0.1",
+    "mini-css-extract-plugin": "^0.4.0",
     "minimatch": "3.0.4",
     "node-sass": "4.9.0",
     "optimize-css-assets-webpack-plugin": "4.0.2",
-    "webpack": "4.12.1",
-    "sass-loader": "7.0.3",
     "parallel-webpack": "2.3.0",
+    "sass-loader": "7.0.3",
+    "webpack": "4.12.1",
     "webpack-bundle-analyzer": "2.13.1",
+    "webpack-cli": "^3.0.8",
     "webpack-dev-server": "3.1.4"
   },
   "dependencies": {
