--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,12 @@
   "license": "AGPL-3.0-or-later",
   "scripts": {
     "build": "yarn bp",
-    "b": "export NODE_ENV=development && ./node_modules/.bin/parallel-webpack",
+    "b": "export NODE_ENV=development && export quiet=true && ./node_modules/.bin/parallel-webpack",
+    "b:v": "export NODE_ENV=development && ./node_modules/.bin/parallel-webpack",
     "server": "export NODE_ENV=development && ./node_modules/.bin/webpack-dev-server",
     "build:production": "yarn bp",
-    "bp": "export NODE_ENV=production && ./node_modules/.bin/parallel-webpack",
+    "bp": "export NODE_ENV=production && export quiet=true && ./node_modules/.bin/parallel-webpack",
+    "bp:v": "export NODE_ENV=production && ./node_modules/.bin/parallel-webpack",
     "flow": "./node_modules/.bin/flow",
     "analyse": "export NODE_ENV=development && export analyse=true && ./node_modules/.bin/webpack"
   },
