remove clean pre build

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,15 +16,15 @@
   "license": "AGPL-3.0-or-later",
   "scripts": {
     "build": "yarn bp",
-    "b": "yarn clean && ./node_modules/.bin/parallel-webpack -- --env.mode='development'",
-    "b:v": "yarn clean && ./node_modules/.bin/parallel-webpack -- --env.mode='development' --env.verbose='enabled'",
+    "b": "./node_modules/.bin/parallel-webpack -- --env.mode='development'",
+    "b:v": "./node_modules/.bin/parallel-webpack -- --env.mode='development' --env.verbose='enabled'",
     "b:w": "./node_modules/.bin/webpack-dashboard -- ./node_modules/.bin/parallel-webpack --watch -- --env.mode='development' --env.dash='enabled'",
     "b:wv": "./node_modules/.bin/webpack-dashboard -- ./node_modules/.bin/parallel-webpack --watch -- --env.mode='development' --env.dash='enabled' --env.verbose='enabled'",
     "server": "yarn s",
     "s": "./node_modules/.bin/webpack-dashboard -- ./node_modules/.bin/webpack-dev-server --env.mode='development' --env.server='enabled' --env.dash='enabled'",
     "build-production": "yarn bp",
-    "bp": "yarn clean && ./node_modules/.bin/parallel-webpack -- --env.mode='production'",
-    "bp:v": "yarn clean && ./node_modules/.bin/parallel-webpack -- --env.mode='production' --env.verbose='enabled'",
+    "bp": "./node_modules/.bin/parallel-webpack -- --env.mode='production'",
+    "bp:v": "./node_modules/.bin/parallel-webpack -- --env.mode='production' --env.verbose='enabled'",
     "bp:w": "./node_modules/.bin/webpack-dashboard -- ./node_modules/.bin/parallel-webpack --watch -- --env.mode='production' --env.dash='enabled'",
     "bp:wv": "./node_modules/.bin/webpack-dashboard -- ./node_modules/.bin/parallel-webpack --watch -- --env.mode='production' --env.dash='enabled' --env.verbose='enabled'",
     "flow": "./node_modules/.bin/flow",
