translations for new calendar event buttons; added default heading when no selection has been made in calendar

--- a/frontend/src/config/i18n.config.json5
+++ b/frontend/src/config/i18n.config.json5
@@ -2099,6 +2099,30 @@
 
     // Calendar //
 
+    cal_go_to_due_date: {
+        'en-GB': 'Go to due date',
+        'fr-FR': '',
+        'es-ES': '',
+        'it-IT': '',
+        'de-DE': '',
+        'ro-RO': '',
+        'pl-PL': '',
+        'tr-TR': '',
+        'pt-PT': '',
+    },
+
+    cal_inspect_glp: {
+        'en-GB': 'Inspect GLP',
+        'fr-FR': '',
+        'es-ES': '',
+        'it-IT': '',
+        'de-DE': '',
+        'ro-RO': '',
+        'pl-PL': '',
+        'tr-TR': '',
+        'pt-PT': '',
+    },
+
     cal_jan: {
         'en-GB': 'January',
         'fr-FR': '',
