--- a/now.json
+++ b/now.json
@@ -1,5 +1,5 @@
 {
-    "name": "bcn-teacher-ui",
+    "name": "beaconing-teacher-ui",
     "type": "docker",
     "env": {
         "BCN_SECRET": "@bcn-secret",
@@ -10,5 +10,6 @@
             "min": 1,
             "max": "auto"
         }
-    }
+    },
+    "alias": "beaconing-teacher-ui"
 }
