--- a/frontend/src/config/i18n.config.json5
+++ b/frontend/src/config/i18n.config.json5
@@ -92,17 +92,6 @@
         'tr-TR': 'Sıra Önceliği',
         'pt-PT': 'Ordenar por',
     },
-    loading: {
-        'en-GB': 'Loading',
-        'fr-FR': 'Chargement',
-        'es-ES': 'Cargando',
-        'it-IT': 'Caricamento',
-        'de-DE': 'Lädt',
-        'ro-RO': 'Se încarcă',
-        'pl-PL': 'Ładowanie',
-        'tr-TR': 'Yüklüyor',
-        'pt-PT': 'A carregar',
-    },
     view: {
         'en-GB': 'View',
         'fr-FR': 'Voir',
@@ -3014,5 +3003,63 @@
         'pl-PL': '',
         'tr-TR': '',
         'pt-PT': ''
+    },
+
+    // Loading Messages //
+
+    loading: {
+        'en-GB': 'Loading',
+        'fr-FR': 'Chargement',
+        'es-ES': 'Cargando',
+        'it-IT': 'Caricamento',
+        'de-DE': 'Lädt',
+        'ro-RO': 'Se încarcă',
+        'pl-PL': 'Ładowanie',
+        'tr-TR': 'Yüklüyor',
+        'pt-PT': 'A carregar',
+    },
+    ld_plans: {
+        'en-GB': 'Loading Plans',
+        'fr-FR': '',
+        'es-ES': '',
+        'it-IT': '',
+        'de-DE': '',
+        'ro-RO': '',
+        'pl-PL': '',
+        'tr-TR': '',
+        'pt-PT': '',
+    },
+    ld_plan: {
+        'en-GB': 'Loading Plan',
+        'fr-FR': '',
+        'es-ES': '',
+        'it-IT': '',
+        'de-DE': '',
+        'ro-RO': '',
+        'pl-PL': '',
+        'tr-TR': '',
+        'pt-PT': '',
+    },
+    ld_students: {
+        'en-GB': 'Loading Students',
+        'fr-FR': '',
+        'es-ES': '',
+        'it-IT': '',
+        'de-DE': '',
+        'ro-RO': '',
+        'pl-PL': '',
+        'tr-TR': '',
+        'pt-PT': '',
+    },
+    ld_groups: {
+        'en-GB': 'Loading Groups',
+        'fr-FR': '',
+        'es-ES': '',
+        'it-IT': '',
+        'de-DE': '',
+        'ro-RO': '',
+        'pl-PL': '',
+        'tr-TR': '',
+        'pt-PT': '',
     },
 }
