[skip ci] add option to babel pipeline plugin

--- a/frontend/.babelrc
+++ b/frontend/.babelrc
@@ -17,7 +17,7 @@
 		["@babel/plugin-proposal-decorators", { "legacy": true }],
 		"@babel/plugin-proposal-class-properties",
 		"@babel/plugin-transform-flow-strip-types",
-		"@babel/plugin-proposal-pipeline-operator",
+		["@babel/plugin-proposal-pipeline-operator", { "proposal": "minimal" }],
 		"@babel/plugin-proposal-optional-chaining",
 		"@babel/plugin-proposal-do-expressions",
 		"@babel/plugin-proposal-function-bind",
