--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
     "@babel/plugin-transform-runtime": "7.0.0-beta.53",
     "@babel/preset-env": "7.0.0-beta.53",
     "@babel/preset-flow": "7.0.0-beta.53",
+    "autoprefixer": "^9.1.0",
     "babel-eslint": "8.2.5",
     "babel-loader": "8.0.0-beta.4",
     "cache-loader": "1.2.2",
@@ -69,6 +70,7 @@
     "node-sass": "4.9.2",
     "optimize-css-assets-webpack-plugin": "4.0.3",
     "parallel-webpack": "2.3.0",
+    "postcss-loader": "^2.1.6",
     "rimraf": "2.6.2",
     "sass-loader": "7.0.3",
     "thread-loader": "1.1.5",
